--- a/SwiftImageUploader/config.plist
+++ b/SwiftImageUploader/config.plist
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   config.plist
-   SwiftImageUploader
-
-   Created by Juan Carlos Garzon on 6/22/16.
-   Copyright (c) 2016 ZongWare. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>host</key>
+	<string>http://localhost:3000/</string>
+</dict>
 </plist>
